# MemoRe

./: .gitignore  CMakeLists.txt  LICENSE
src/: Main.qml  main.cpp
